// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rendering points - areas Multi series area chart - linear can render first spec points 1`] = `
[
  {
    "color": "red",
    "isolated": false,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 3,
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{spec_1}yAccessor{1}splitAccessors{}",
      "seriesKeys": [
        1,
      ],
      "specId": "spec_1",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 1,
    },
    "style": {
      "fill": {
        "color": [
          255,
          0,
          0,
          1,
        ],
      },
      "radius": 3,
      "shape": "circle",
      "stroke": {
        "color": [
          0,
          0,
          0,
          0,
        ],
        "width": 0,
      },
    },
    "transform": {
      "x": 0,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        1,
        5,
      ],
      "mark": null,
      "x": 1,
      "y": 5,
    },
    "x": 100,
    "y": 75,
  },
  {
    "color": "red",
    "isolated": false,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 3,
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{spec_1}yAccessor{1}splitAccessors{}",
      "seriesKeys": [
        1,
      ],
      "specId": "spec_1",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 1,
    },
    "style": {
      "fill": {
        "color": [
          255,
          0,
          0,
          1,
        ],
      },
      "radius": 3,
      "shape": "circle",
      "stroke": {
        "color": [
          0,
          0,
          0,
          0,
        ],
        "width": 0,
      },
    },
    "transform": {
      "x": 0,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        0,
        10,
      ],
      "mark": null,
      "x": 0,
      "y": 10,
    },
    "x": 0,
    "y": 50,
  },
]
`;

exports[`Rendering points - areas Multi series area chart - linear can render second spec points 1`] = `
[
  {
    "color": "blue",
    "isolated": false,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 3,
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{spec_2}yAccessor{1}splitAccessors{}",
      "seriesKeys": [
        1,
      ],
      "specId": "spec_2",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 1,
    },
    "style": {
      "fill": {
        "color": [
          0,
          0,
          255,
          1,
        ],
      },
      "radius": 3,
      "shape": "circle",
      "stroke": {
        "color": [
          0,
          0,
          0,
          0,
        ],
        "width": 0,
      },
    },
    "transform": {
      "x": 0,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        1,
        10,
      ],
      "mark": null,
      "x": 1,
      "y": 10,
    },
    "x": 100,
    "y": 50,
  },
  {
    "color": "blue",
    "isolated": false,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 3,
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{spec_2}yAccessor{1}splitAccessors{}",
      "seriesKeys": [
        1,
      ],
      "specId": "spec_2",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 1,
    },
    "style": {
      "fill": {
        "color": [
          0,
          0,
          255,
          1,
        ],
      },
      "radius": 3,
      "shape": "circle",
      "stroke": {
        "color": [
          0,
          0,
          0,
          0,
        ],
        "width": 0,
      },
    },
    "transform": {
      "x": 0,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        0,
        20,
      ],
      "mark": null,
      "x": 0,
      "y": 20,
    },
    "x": 0,
    "y": 0,
  },
]
`;

exports[`Rendering points - areas Multi series area chart - ordinal can render first spec points 1`] = `
[
  {
    "color": "red",
    "isolated": false,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 3,
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{spec_1}yAccessor{1}splitAccessors{}",
      "seriesKeys": [
        1,
      ],
      "specId": "spec_1",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 1,
    },
    "style": {
      "fill": {
        "color": [
          255,
          0,
          0,
          1,
        ],
      },
      "radius": 3,
      "shape": "circle",
      "stroke": {
        "color": [
          0,
          0,
          0,
          0,
        ],
        "width": 0,
      },
    },
    "transform": {
      "x": 25,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        1,
        5,
      ],
      "mark": null,
      "x": 1,
      "y": 5,
    },
    "x": 50,
    "y": 75,
  },
  {
    "color": "red",
    "isolated": false,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 3,
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{spec_1}yAccessor{1}splitAccessors{}",
      "seriesKeys": [
        1,
      ],
      "specId": "spec_1",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 1,
    },
    "style": {
      "fill": {
        "color": [
          255,
          0,
          0,
          1,
        ],
      },
      "radius": 3,
      "shape": "circle",
      "stroke": {
        "color": [
          0,
          0,
          0,
          0,
        ],
        "width": 0,
      },
    },
    "transform": {
      "x": 25,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        0,
        10,
      ],
      "mark": null,
      "x": 0,
      "y": 10,
    },
    "x": 0,
    "y": 50,
  },
]
`;

exports[`Rendering points - areas Multi series area chart - ordinal can render second spec points 1`] = `
[
  {
    "color": "blue",
    "isolated": false,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 3,
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{spec_2}yAccessor{1}splitAccessors{}",
      "seriesKeys": [
        1,
      ],
      "specId": "spec_2",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 1,
    },
    "style": {
      "fill": {
        "color": [
          0,
          0,
          255,
          1,
        ],
      },
      "radius": 3,
      "shape": "circle",
      "stroke": {
        "color": [
          0,
          0,
          0,
          0,
        ],
        "width": 0,
      },
    },
    "transform": {
      "x": 25,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        1,
        10,
      ],
      "mark": null,
      "x": 1,
      "y": 10,
    },
    "x": 50,
    "y": 50,
  },
  {
    "color": "blue",
    "isolated": false,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 3,
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{spec_2}yAccessor{1}splitAccessors{}",
      "seriesKeys": [
        1,
      ],
      "specId": "spec_2",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 1,
    },
    "style": {
      "fill": {
        "color": [
          0,
          0,
          255,
          1,
        ],
      },
      "radius": 3,
      "shape": "circle",
      "stroke": {
        "color": [
          0,
          0,
          0,
          0,
        ],
        "width": 0,
      },
    },
    "transform": {
      "x": 25,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        0,
        20,
      ],
      "mark": null,
      "x": 0,
      "y": 20,
    },
    "x": 0,
    "y": 0,
  },
]
`;

exports[`Rendering points - areas Multi series area chart - time can render first spec points 1`] = `
[
  {
    "color": "red",
    "isolated": false,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 3,
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{spec_1}yAccessor{1}splitAccessors{}",
      "seriesKeys": [
        1,
      ],
      "specId": "spec_1",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 1,
    },
    "style": {
      "fill": {
        "color": [
          255,
          0,
          0,
          1,
        ],
      },
      "radius": 3,
      "shape": "circle",
      "stroke": {
        "color": [
          0,
          0,
          0,
          0,
        ],
        "width": 0,
      },
    },
    "transform": {
      "x": 0,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        1546387200000,
        5,
      ],
      "mark": null,
      "x": 1546387200000,
      "y": 5,
    },
    "x": 100,
    "y": 75,
  },
  {
    "color": "red",
    "isolated": false,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 3,
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{spec_1}yAccessor{1}splitAccessors{}",
      "seriesKeys": [
        1,
      ],
      "specId": "spec_1",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 1,
    },
    "style": {
      "fill": {
        "color": [
          255,
          0,
          0,
          1,
        ],
      },
      "radius": 3,
      "shape": "circle",
      "stroke": {
        "color": [
          0,
          0,
          0,
          0,
        ],
        "width": 0,
      },
    },
    "transform": {
      "x": 0,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        1546300800000,
        10,
      ],
      "mark": null,
      "x": 1546300800000,
      "y": 10,
    },
    "x": 0,
    "y": 50,
  },
]
`;

exports[`Rendering points - areas Multi series area chart - time can render second spec points 1`] = `
[
  {
    "color": "blue",
    "isolated": false,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 3,
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{spec_2}yAccessor{1}splitAccessors{}",
      "seriesKeys": [
        1,
      ],
      "specId": "spec_2",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 1,
    },
    "style": {
      "fill": {
        "color": [
          0,
          0,
          255,
          1,
        ],
      },
      "radius": 3,
      "shape": "circle",
      "stroke": {
        "color": [
          0,
          0,
          0,
          0,
        ],
        "width": 0,
      },
    },
    "transform": {
      "x": 0,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        1546387200000,
        10,
      ],
      "mark": null,
      "x": 1546387200000,
      "y": 10,
    },
    "x": 100,
    "y": 50,
  },
  {
    "color": "blue",
    "isolated": false,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 3,
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{spec_2}yAccessor{1}splitAccessors{}",
      "seriesKeys": [
        1,
      ],
      "specId": "spec_2",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 1,
    },
    "style": {
      "fill": {
        "color": [
          0,
          0,
          255,
          1,
        ],
      },
      "radius": 3,
      "shape": "circle",
      "stroke": {
        "color": [
          0,
          0,
          0,
          0,
        ],
        "width": 0,
      },
    },
    "transform": {
      "x": 0,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        1546300800000,
        20,
      ],
      "mark": null,
      "x": 1546300800000,
      "y": 20,
    },
    "x": 0,
    "y": 0,
  },
]
`;

exports[`Rendering points - areas Single series area chart - linear Can render two points 1`] = `
[
  {
    "color": "red",
    "isolated": false,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 3,
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{spec_1}yAccessor{1}splitAccessors{}",
      "seriesKeys": [
        1,
      ],
      "specId": "spec_1",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 1,
    },
    "style": {
      "fill": {
        "color": [
          255,
          0,
          0,
          1,
        ],
      },
      "radius": 3,
      "shape": "circle",
      "stroke": {
        "color": [
          0,
          0,
          0,
          0,
        ],
        "width": 0,
      },
    },
    "transform": {
      "x": 0,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        1,
        5,
      ],
      "mark": null,
      "x": 1,
      "y": 5,
    },
    "x": 100,
    "y": 50,
  },
  {
    "color": "red",
    "isolated": false,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 3,
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{spec_1}yAccessor{1}splitAccessors{}",
      "seriesKeys": [
        1,
      ],
      "specId": "spec_1",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 1,
    },
    "style": {
      "fill": {
        "color": [
          255,
          0,
          0,
          1,
        ],
      },
      "radius": 3,
      "shape": "circle",
      "stroke": {
        "color": [
          0,
          0,
          0,
          0,
        ],
        "width": 0,
      },
    },
    "transform": {
      "x": 0,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        0,
        10,
      ],
      "mark": null,
      "x": 0,
      "y": 10,
    },
    "x": 0,
    "y": 0,
  },
]
`;

exports[`Rendering points - areas Single series area chart - ordinal Can render two points 1`] = `
[
  {
    "color": "red",
    "isolated": false,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 3,
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{spec_1}yAccessor{1}splitAccessors{}",
      "seriesKeys": [
        1,
      ],
      "specId": "spec_1",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 1,
    },
    "style": {
      "fill": {
        "color": [
          255,
          0,
          0,
          1,
        ],
      },
      "radius": 3,
      "shape": "circle",
      "stroke": {
        "color": [
          0,
          0,
          0,
          0,
        ],
        "width": 0,
      },
    },
    "transform": {
      "x": 25,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        1,
        5,
      ],
      "mark": null,
      "x": 1,
      "y": 5,
    },
    "x": 50,
    "y": 50,
  },
  {
    "color": "red",
    "isolated": false,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 3,
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{spec_1}yAccessor{1}splitAccessors{}",
      "seriesKeys": [
        1,
      ],
      "specId": "spec_1",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 1,
    },
    "style": {
      "fill": {
        "color": [
          255,
          0,
          0,
          1,
        ],
      },
      "radius": 3,
      "shape": "circle",
      "stroke": {
        "color": [
          0,
          0,
          0,
          0,
        ],
        "width": 0,
      },
    },
    "transform": {
      "x": 25,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        0,
        10,
      ],
      "mark": null,
      "x": 0,
      "y": 10,
    },
    "x": 0,
    "y": 0,
  },
]
`;

exports[`Rendering points - areas Single series area chart - time Can render two points 1`] = `
[
  {
    "color": "red",
    "isolated": false,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 3,
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{spec_1}yAccessor{1}splitAccessors{}",
      "seriesKeys": [
        1,
      ],
      "specId": "spec_1",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 1,
    },
    "style": {
      "fill": {
        "color": [
          255,
          0,
          0,
          1,
        ],
      },
      "radius": 3,
      "shape": "circle",
      "stroke": {
        "color": [
          0,
          0,
          0,
          0,
        ],
        "width": 0,
      },
    },
    "transform": {
      "x": 0,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        1546387200000,
        5,
      ],
      "mark": null,
      "x": 1546387200000,
      "y": 5,
    },
    "x": 100,
    "y": 50,
  },
  {
    "color": "red",
    "isolated": false,
    "panel": {
      "height": 100,
      "left": 0,
      "top": 0,
      "width": 100,
    },
    "radius": 3,
    "seriesIdentifier": {
      "key": "groupId{group_1}spec{spec_1}yAccessor{1}splitAccessors{}",
      "seriesKeys": [
        1,
      ],
      "specId": "spec_1",
      "splitAccessors": Map {},
      "xAccessor": 0,
      "yAccessor": 1,
    },
    "style": {
      "fill": {
        "color": [
          255,
          0,
          0,
          1,
        ],
      },
      "radius": 3,
      "shape": "circle",
      "stroke": {
        "color": [
          0,
          0,
          0,
          0,
        ],
        "width": 0,
      },
    },
    "transform": {
      "x": 0,
      "y": 0,
    },
    "value": {
      "accessor": "y1",
      "datum": [
        1546300800000,
        10,
      ],
      "mark": null,
      "x": 1546300800000,
      "y": 10,
    },
    "x": 0,
    "y": 0,
  },
]
`;

exports[`Rendering points - areas Stacked areas with 0 values 1`] = `
[
  {
    "datum": [
      1546300800000,
      0,
    ],
    "filled": undefined,
    "initialY0": null,
    "initialY1": 0,
    "mark": null,
    "x": 1546300800000,
    "y0": 0,
    "y1": 0,
  },
  {
    "datum": [
      1546387200000,
      5,
    ],
    "filled": undefined,
    "initialY0": null,
    "initialY1": 5,
    "mark": null,
    "x": 1546387200000,
    "y0": 0,
    "y1": 0.7142857142857143,
  },
]
`;

exports[`Rendering points - areas Stacked areas with null values 1`] = `
[
  {
    "datum": [
      1546300800000,
      null,
    ],
    "filled": undefined,
    "initialY0": null,
    "initialY1": null,
    "mark": null,
    "x": 1546300800000,
    "y0": 0,
    "y1": 0,
  },
  {
    "datum": [
      1546387200000,
      5,
    ],
    "filled": undefined,
    "initialY0": null,
    "initialY1": 5,
    "mark": null,
    "x": 1546387200000,
    "y0": 0,
    "y1": 5,
  },
]
`;

exports[`Rendering points - areas Stacked areas with null values 2`] = `
[
  {
    "datum": [
      1546300800000,
      3,
    ],
    "filled": undefined,
    "initialY0": null,
    "initialY1": 3,
    "mark": null,
    "x": 1546300800000,
    "y0": 0,
    "y1": 3,
  },
  {
    "datum": [
      1546387200000,
      null,
    ],
    "filled": undefined,
    "initialY0": null,
    "initialY1": null,
    "mark": null,
    "x": 1546387200000,
    "y0": 5,
    "y1": 5,
  },
]
`;
